--- a/src/sass/templates/_nav.scss
+++ b/src/sass/templates/_nav.scss
@@ -1,5 +1,6 @@
 nav {
   position: sticky;
+  position: -webkit-sticky;
   top: 0;
   z-index: 1;
   display: flex;
@@ -93,6 +94,7 @@ nav {
       background-color: transparent;
       border: 0;
       opacity: 1;
+      overflow-y: hidden;
     }
 
     li {
